Fix tooltip on safari. Closes #999

--- a/app/assets/client/css/grid.scss
+++ b/app/assets/client/css/grid.scss
@@ -64,6 +64,9 @@
     &.small {
       padding: 10px 15px;
     }
+    &.items-3 {
+      min-height: 110px;
+    }
   }
 }
 
@@ -320,7 +323,7 @@
       letter-spacing: .05em;
     }
   }
-  
+
   .label {
     font-size: 6pt;
 
